@@ -67,6 +67,7 @@ following names for their contribution to the product.
 * Daniel Arnold
 * Danny B.
 * Derk-Jan Hartman
+* Emufarmers
 * FunPika
 * Happy-melon
 * Jeremy Baron
